fixing too large picture for every components owning it

--- a/styles/NewPicture.module.css
+++ b/styles/NewPicture.module.css
@@ -130,6 +130,7 @@
     padding-right: 20px;
     height: 150px;
     padding-top: 10px;
+    resize: none;
 }
 
 .imgContainer {
